Rejigger instruction class hierarchy